# fluid_simulation

./: Cargo.toml  README.md  config.json
src/: flow_field.rs  main.rs  mass_distr.rs  save_frame.rs  sim_ctrl.rs  simulate.rs  utility.rs
