[package]
name = "fluid_simulation"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
strip = true

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rayon = "1.5.1"
rand = "0.8.5"
noise = "0.7.0"
image = "0.24.1"
console = "0.15.0"
indicatif = "0.16.2"
